# aurora

./: CMakeLists.txt
au-builder/: arch-importer.py  arch-repack.sh  aupkg.sh  build.sh  build.yaml  dash-0.5.12-1-x86_64.pkg.tar.zst
au-repotool/: CMakeLists.txt
au-repotool/src/: main.cpp  yaml_writer.h
aurora-cli/: CMakeLists.txt
aurora-cli/src/: main.cpp  ui_helpers.h
aurora-repotool/: CMakeLists.txt
aurora-repotool/src/: main.cpp  yaml_writer.h
libau/: CMakeLists.txt
libau/include/: archive.h  database.h  downloader.h  package_manager.h  parser.h  sqlite_orm.h
libau/include/libau/: archive.h  crypto.h  database.h  dependency_resolver.h  downloader.h  logging.h  lua_sandbox.h  package.h  package_manager.h  repository.h  ui.h
libau/src/: archive.cpp  crypto.cpp  database.cpp  dependency_resolver.cpp  downloader.cpp  lua_sandbox.cpp  package_manager.cpp  parser.cpp  repository.cpp
libau/tests/: CMakeLists.txt  invalid_syntax.yaml  minimal_package.yaml  missing_required.yaml  test_database.cpp  test_dependency_resolver.cpp  test_downloader.cpp  test_full_lifecycle.cpp  test_package_manager.cpp  test_parser.cpp  test_repository_manager.cpp  valid_package.yaml
libau/tests/test_repo_setup/: repos.conf
libau/tests/test_repo_setup/core/: repo.yaml
libau/tests/test_repo_setup/extra/: repo.yaml
